[package]
name = "minecraft_connector_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.133"
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["full"] }
