[package]
name = "minecraft_connector_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "io-util"] }
thiserror = "1"
env_logger = "0.11"
log = "0.4"
